--- a/public/static/locales/en/common.json
+++ b/public/static/locales/en/common.json
@@ -1,4 +1,7 @@
 {
   "home-title": "WEB CRAWLER",
-  "home-title-author": " By Andre Torres"
+  "home-title-author": "by Andre Torres",
+
+  "news-comments": "comments",
+  "news-points": "points"
 }
