--- a/public/static/locales/es/common.json
+++ b/public/static/locales/es/common.json
@@ -1,4 +1,7 @@
 {
   "home-title": "WEB CRAWLER",
-  "home-title-author": " Por Andre Torres"
+  "home-title-author": "por Andre Torres",
+
+  "news-comments": "comentarios",
+  "news-points": "puntos"
 }
