cal endpoint with filters and setup radio group buttons

--- a/public/static/locales/es/common.json
+++ b/public/static/locales/es/common.json
@@ -1,6 +1,9 @@
 {
   "home-title": "WEB CRAWLER",
   "home-title-author": "por Andre Torres",
+  "home-filters-all-value": "Todas las Noticias",
+  "home-filters-long-titles-value": "Títulos Largos",
+  "home-filters-short-titles-value": "Títulos Cortos",
 
   "news-comments": "comentarios",
   "news-points": "puntos",
