--- a/public/static/locales/en/common.json
+++ b/public/static/locales/en/common.json
@@ -1,6 +1,9 @@
 {
   "home-title": "WEB CRAWLER",
   "home-title-author": "by Andre Torres",
+  "home-filters-all-value": "All News",
+  "home-filters-long-titles-value": "Long Titles",
+  "home-filters-short-titles-value": "Short Titles",
 
   "news-comments": "comments",
   "news-points": "points",
